--- a/package.json
+++ b/package.json
@@ -13,22 +13,28 @@
     "deploy": "npm run build && npm start"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "@types/cors": "^2.8.19",
     "cors": "^2.8.5",
+    "express": "^4.18.2",
     "helmet": "^7.0.0",
     "readline-sync": "^1.4.10"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.3",
     "@types/node": "^20.4.5",
     "@types/readline-sync": "^1.4.4",
-    "@types/jest": "^29.5.3",
-    "typescript": "^5.1.6",
-    "ts-node-dev": "^2.0.0",
     "jest": "^29.6.1",
-    "ts-jest": "^29.1.1"
+    "ts-jest": "^29.1.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.1.6"
   },
-  "keywords": ["bookstore", "management", "typescript", "collections"],
+  "keywords": [
+    "bookstore",
+    "management",
+    "typescript",
+    "collections"
+  ],
   "author": "Seu Nome",
   "license": "MIT"
 }
